# ra2l1_i2c_master_minimal_example

./: CMakeLists.txt  CMakePresets.json
CMake/toolchains/: arm-none-eabi-gcc.cmake
common/: CMakeLists.txt  print.cpp  syscalls.cpp
ra2l1/: .secure_azone  .secure_xml  CMakeLists.txt  buildinfo.json  configuration.xml  ra_cfg.txt
ra2l1/cmake/: GeneratedCfg.cmake
ra2l1/ra_gen/: hal_data.c  hal_data.h  vector_data.c  vector_data.h
ra2l1/script/: fsp.ld
ra2l1/src/: hal_entry.cpp
src/: main.cpp
